--- a/downloads/index.m4.html
+++ b/downloads/index.m4.html
@@ -12,14 +12,22 @@ include(sourceRoot/leader.m4.html)
 
 <p>
 	The Continental Drift Observation Project is a programme whereby
-	students of secondary school age (11-18)
+	students of secondary school age (eleven to eighteen years)
 	go out once a year and use an accurate GNSS receiver
 	to measure the position of a chosen fixed point.
-	In Europe, they see the effect of the drift
-	after two years.
+	In Europe, they would see the effect of the drift
+	after two years,
+	when they take their third measurement..
 	Over their remaining school career
 	they see that the Eurasian
 	continent is moving north-east at about three centimetres per year.
+	Meanwhile, they will learn the necessary mathematics,
+	physics and geography
+	to understand what's going on.
+</p>
+<p>
+	The rate of drift on other continents is different,
+	but potentially this could be done
 </p>
 <p>
 	<a href="continental.drift.pdf">continental.drift.pdf</a>
