reworked header, trailer and downloads

--- a/downloads/index.m4.html
+++ b/downloads/index.m4.html
@@ -3,27 +3,41 @@ define(pageTitle, `GPS')
 include(sourceRoot/leader.m4.html)
 
 <h2>Downloads</h2>
-
-<p>
-	The Continental Drift Observation Project is a programme whereby
-	students of secondary school age (eleven to eighteen years)
-	go out once a year and use an accurate GNSS receiver
-	to measure the position of a chosen fixed point.
-	In Europe, they would see the effect of the drift
-	after two years,
-	when they take their third measurement..
-	Over their remaining school career
-	they see that the Eurasian
-	continent is moving north-east at about three centimetres per year.
-	Meanwhile, they will learn the necessary mathematics,
-	physics and geography
-	to understand what's going on.
-</p>
-<p>
-	The rate of drift on other continents is different,
-	but potentially this could be done
-</p>
-<p>
-	<a href="continental.drift.pdf">continental.drift.pdf</a>
-</p>
-include(sourceRoot/trailer.m4.html)
+<h3>The Continental Drift Observation Project
+	<p>
+		This is a programme whereby
+		students of secondary school age (eleven to eighteen years)
+		go out once a year and use an accurate GNSS receiver
+		to measure the position of a chosen fixed point.
+		All continents are moving due to continental drift
+		and the equipment is accurate enough to detect this
+		over a few years.
+	</p>
+	<p>
+		I'm based in the UK.
+		The Eurasian continent is moving at about three centimetres per year
+		and the equipment is accurate to about three centimetres.
+		When students here take their third measurement,
+		they will see that their fixed point has moved about six centimetres
+		from their first measurement,
+		two years earlier.
+		This is well outside the resolution of the equipment,
+		so it's clear that the ground they stand on is moving.
+		Over their remaining school career
+		they will see that the ground is moving steadily north-east.
+		Meanwhile
+		they will learn the necessary mathematics and Geography
+		to understand what's going on.
+		If they study physics they will also learn
+		how the measuring equipment works.
+	</p>
+	<p>
+		The rate and direction of drift on other continents is different,
+		but potentially this experiment can be done in schools
+		anywhere in the world on solid ground.
+	</p>
+	<p>
+		For more details, download
+		<a href="continental.drift.pdf">this PDF document</a>
+	</p>
+	include(sourceRoot/trailer.m4.html)
