--- a/leader.m4.html
+++ b/leader.m4.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>pageTitle()</title>
+        <title>GPS home</title>
 
         <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
 
@@ -34,14 +34,10 @@
 <body>
         <div id="topmenu">
 
-                <div id="logo">
-                        <a href="/">
-                                <h1><b>Accurate Position</b></h1>
-                        </a>
+                <div>
+                        <a href="/"><img src='/images/logo.320.jpg' alt='link to accurateposition.org home page'> </a>
                 </div>
-                <br>
                 <div id="topmenu-buttons">
-                        &nbsp;
                         <ul>
                                 <li><a href="/projects/index.html">Projects</a></li>
                                 <li><a href="/downloads/index/html/">Downloads</a></li>
