--- a/trailer.m4.html
+++ b/trailer.m4.html
@@ -1,4 +1,11 @@
+<p>
+    &nbsp;
+</p>
+<p class="'small'">
+    Copyright &copy; Merrow Internet Services Ltd 2024
+    <a href='/contacts/create'>contact</a>
+</p>
 </div>
 </body>
-</html>
 
+</html>
