--- a/leader.m4.html
+++ b/leader.m4.html
@@ -40,7 +40,7 @@
                 <div id="topmenu-buttons">
                         <ul>
                                 <li><a href="/projects/index.html">Projects</a></li>
-                                <li><a href="/downloads/index/html/">Downloads</a></li>
+                                <li><a href="/downloads/index.html/">Downloads</a></li>
                                 <li><a href="/contacts/create">Contact Us</a></li>
                         </ul>
                 </div>
