--- a/leader.m4.html
+++ b/leader.m4.html
@@ -2,50 +2,50 @@
 <html>
 
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset='UTF-8'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>GPS home</title>
 
-        <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
+        <link rel='stylesheet' type='text/css' href='/stylesheets/stylesheet.css'>
 
-        <link rel="stylesheet" type="text/css" media="(min-width:1200px)" href="/stylesheets/stylesheet.big.css">
-        <link rel="stylesheet" type="text/css" media="(min-height: 1200px) and (orientation:landscape)"
-                href="/stylesheets/stylesheet.big.css">
+        <link rel='stylesheet' type='text/css' media='(min-width:1200px)' href='/stylesheets/stylesheet.big.css'>
+        <link rel='stylesheet' type='text/css' media='(min-height: 1200px) and (orientation:landscape)'
+                href='/stylesheets/stylesheet.big.css'>
 
-        <link rel="stylesheet" type="text/css" media="(min-width: 1000px max-width: 1199px)"
-                href="/stylesheets/stylesheet.1000.css">
-        <link rel="stylesheet" type="text/css"
-                media="(min-height: 1000px max-height:1199px) and (orientation:landscape)"
-                href="/stylesheets/stylesheet.1000.css">
+        <link rel='stylesheet' type='text/css' media='(min-width: 1000px max-width: 1199px)'
+                href='/stylesheets/stylesheet.1000.css'>
+        <link rel='stylesheet' type='text/css'
+                media='(min-height: 1000px max-height:1199px) and (orientation:landscape)'
+                href='/stylesheets/stylesheet.1000.css'>
 
-        <link rel="stylesheet" type="text/css" media="(min-width: 800px max-width: 999px)"
-                href="/stylesheets/stylesheet.800.css">
-        <link rel="stylesheet" type="text/css" media="(min-height: 800px max-height: 999px) and (orientation:landscape)"
-                href="/stylesheets/stylesheet.800.css">
+        <link rel='stylesheet' type='text/css' media='(min-width: 800px max-width: 999px)'
+                href='/stylesheets/stylesheet.800.css'>
+        <link rel='stylesheet' type='text/css' media='(min-height: 800px max-height: 999px) and (orientation:landscape)'
+                href='/stylesheets/stylesheet.800.css'>
 
-        <link rel="stylesheet" type="text/css" media="(min-width:480px max-width: 799px)"
-                href="/stylesheets/stylesheet.480.css">
-        <link rel="stylesheet" type="text/css" media="(min-height:480px max-height: 799px) and (orientation:landscape)"
-                href="/stylesheets/stylesheet.480.css">
+        <link rel='stylesheet' type='text/css' media='(min-width:480px max-width: 799px)'
+                href='/stylesheets/stylesheet.480.css'>
+        <link rel='stylesheet' type='text/css' media='(min-height:480px max-height: 799px) and (orientation:landscape)'
+                href='/stylesheets/stylesheet.480.css'>
 
-        <link rel="stylesheet" type="text/css" media="(max-width: 479px)" href="/stylesheets/stylesheet.320.css">
+        <link rel='stylesheet' type='text/css' media='(max-width: 479px)' href='/stylesheets/stylesheet.320.css'>
 </head>
 
 <body>
-        <div id="topmenu">
+        <div id='topmenu'>
 
                 <div>
-                        <a href="/"><img src='/images/logo.320.jpg' alt='link to accurateposition.org home page'> </a>
+                        <a href='/'><img src='/images/logo.320.jpg' alt='link to accurateposition.org home page'> </a>
                 </div>
-                <div id="topmenu-buttons">
+                <div id='topmenu-buttons'>
                         <ul>
-                                <li><a href="/projects/index.html">Projects</a></li>
-                                <li><a href="/downloads/index.html/">Downloads</a></li>
-                                <li><a href="/contacts/create">Contact Us</a></li>
+                                <li><a href='/projects/index.html'>Projects</a></li>
+                                <li><a href='/downloads/index.html'>Downloads</a></li>
+                                <li><a href='/contacts/create'>Contact Us</a></li>
                         </ul>
                 </div>
         </div>
 
-        <div id="page">
+        <div id='page'>
 
                 <hr>
