--- a/leader.m4.html
+++ b/leader.m4.html
@@ -31,7 +31,7 @@
         <link rel='stylesheet' type='text/css' media='(max-width: 479px)' href='/stylesheets/stylesheet.320.css'>
 </head>
 
-<body>
+<body id='body'>
         <div id='topmenu'>
 
                 <div>
