copyright notice in small font

--- a/trailer.m4.html
+++ b/trailer.m4.html
@@ -1,9 +1,12 @@
 <p>
     &nbsp;
 </p>
-<p class='small'>
-    Copyright &copy; Merrow Internet Services Ltd 2024
-    <a href='/contacts/create'>contact</a>
+<p>
+    <a href='/contacts/create'>Contact</a>
+    <br>
+    <span id='copyrightNotice'>
+        Copyright &copy; Merrow Internet Services Ltd 2024
+    </span>
 </p>
 </div>
 </body>
