--- a/downloads/index.m4.html
+++ b/downloads/index.m4.html
@@ -5,36 +5,18 @@ include(sourceRoot/leader.m4.html)
 <h2>Downloads</h2>
 <h3>The Continental Drift Observation Project</h3>
 <p>
-	This is a programme whereby
+	All of the continents are moving slowly but steadily
+	due to continental drift.
+	GNSS receivers are accurate enough to detect
+	this movement over a few years
+	and recently they have become cheap enough
+	to be used in schools.
+</p>
+<p>
+	In this project,
 	students of secondary school age (eleven to eighteen years)
-	go out once a year and use an accurate GNSS receiver
-	to measure the position of a chosen fixed point.
-	All continents are moving due to continental drift
-	and the equipment is accurate enough to detect this
-	over a few years.
-</p>
-<p>
-	I'm based in the UK.
-	The Eurasian continent is moving at about three centimetres per year
-	and the equipment is accurate to about three centimetres.
-	When students here take their third measurement,
-	they will see that their fixed point has moved about six centimetres
-	from their first measurement,
-	two years earlier.
-	This is well outside the resolution of the equipment,
-	so it's clear that the ground they stand on is moving.
-	Over their remaining school career
-	they will see that the ground is moving steadily north-east.
-	Meanwhile
-	they will learn the necessary mathematics and Geography
-	to understand what's going on.
-	If they study physics they will also learn
-	how the measuring equipment works.
-</p>
-<p>
-	The rate and direction of drift on other continents is different,
-	but potentially this experiment can be done in schools
-	anywhere in the world on solid ground.
+	will use accurate GNSS equipment to measure
+	the rate of drift of the ground under their feet.
 </p>
 <p>
 	For more details, download
