--- a/downloads/index.m4.html
+++ b/downloads/index.m4.html
@@ -1,5 +1,5 @@
 include(sourceRoot/definitions.m4)
-define(pageTitle, `GPS')
+define(pageTitle, `downloads')
 include(sourceRoot/leader.m4.html)
 
 <h2>Downloads</h2>
