--- a/leader.m4.html
+++ b/leader.m4.html
@@ -35,7 +35,15 @@
         <div id='topmenu'>
 
                 <div>
-                        <a href='/'><img src='/images/logo.320.jpg' alt='link to accurateposition.org home page'> </a>
+                        <a href='/'>
+                                <img srcset='/images/logo.160.jpeg 125w,
+                                        /images/logo/logo.320.jpeg 258w, 
+                                        /images/logo/logo.640.jpeg 513w,
+                                        /images/logo/logo.1280.jpeg 681w' sizes='(max-width: 160px) 125px,
+                                        (max-width: 320px) 258px,
+                                        (max-width: 640px) 513px,
+                                        (max-width: 1280px) 681px' alt='link to accurateposition.org home page'>
+                        </a>
                 </div>
                 <div id='topmenu-buttons'>
                         <ul>
