--- a/leader.m4.html
+++ b/leader.m4.html
@@ -42,7 +42,7 @@
                                         /images/logo/logo.1280.jpeg 681w' sizes='(max-width: 160px) 125px,
                                         (max-width: 320px) 258px,
                                         (max-width: 640px) 513px,
-                                        (max-width: 1280px) 681px' alt='link to accurateposition.org home page'>
+                                        681px' alt='link to accurateposition.org home page'>
                         </a>
                 </div>
                 <div id='topmenu-buttons'>
