--- a/leader.m4.html
+++ b/leader.m4.html
@@ -36,7 +36,7 @@
 
                 <div>
                         <a href='/'>
-                                <img srcset='/images/logo.160.jpeg 125w,
+                                <img srcset='/images/logo/logo.160.jpeg 125w,
                                         /images/logo/logo.320.jpeg 258w, 
                                         /images/logo/logo.640.jpeg 513w,
                                         /images/logo/logo.1280.jpeg 681w' sizes='(max-width: 160px) 125px,
