--- a/leader.m4.html
+++ b/leader.m4.html
@@ -33,16 +33,12 @@
 
 <body id='body'>
         <div id='topmenu'>
-
                 <div>
                         <a href='/'>
-                                <img srcset='/images/logo/logo.160.jpeg 125w,
-                                        /images/logo/logo.320.jpeg 258w, 
-                                        /images/logo/logo.640.jpeg 513w,
-                                        /images/logo/logo.1280.jpeg 681w' sizes='(max-width: 160px) 125px,
-                                        (max-width: 320px) 258px,
-                                        (max-width: 640px) 513px,
-                                        681px' alt='link to accurateposition.org home page'>
+                                <img srcset='/images/logo/logo.160.jpg 125w,
+                                        /images/logo/logo.320.jpg 258w,
+                                        /images/logo/logo.640.jpg 513w' sizes=' (max-width: 160px) 125px, (max-width: 360px) 258px, (max-width: 640px)
+                                        513px, 513px' alt='link to accurateposition.org home page'>
                         </a>
                 </div>
                 <div id='topmenu-buttons'>
