--- a/gnss/1.coordinates.m4.html
+++ b/gnss/1.coordinates.m4.html
@@ -338,7 +338,7 @@ linksFirstPage(`index.html', `2.gnss.html')
     The earth has radius 6,371,000 metres, diameter 12,714,000 metres.
     The circumference of a circle is
     <br><br>
-    diameter X PI
+    diameter X pi
     <br><br>
     so
     the circumference of a meridian is about 40,000,000 metres.
@@ -696,7 +696,7 @@ so it ranged over one centimetre.
     across the world due to global warming.
     The effect is bigger in the UK than
     the post-glacial rebound,
-    so the overall effect is that that
+    so the overall effect is that
     sea levels are rising everywhere in the UK,
     but they are rising a bit faster
     in the south than in the north.
@@ -744,7 +744,7 @@ so it ranged over one centimetre.
     When the railways came,
     we needed a common notion of the time of day
     so that the operators could publish a timetable.
-    That lead to railway Time,
+    That lead to Railway Time,
     which was based on Noon at the Greenwich Observatory.
     Railway Time was later replaced by Greenwich Mean Time (GMT)
     and then
@@ -802,12 +802,13 @@ so it ranged over one centimetre.
     Meanwhile the USA moves in a different direction
     and the two plates are moving apart at about 3cm per year.
     Iceland sits at the point where the two plates part
-    which causes all sorts of geophysical effects such as volcanoes.
+    which causes all sorts of geophysical effects,
+    some quite violent.
 </p>
 <p>
-    This didn't matter so much
+    This slow movement didn't matter so much
     before accurate GNSS equipment came along,
-    but now the movement can be detected
+    but now it can be detected
     using equipment costing only a few hundred dollars.
 </p>
 
@@ -891,7 +892,7 @@ so it ranged over one centimetre.
     This is essentially what the UK Ordnance Survey
     did when they defined OSGB36.
     Their points on the ground were concrete markers
-    called Trig Points that the laid out across the country.
+    called Trig Points that they laid out across the country.
     Nowadays, the GNSS ground stations
     act as the fixed points that define the various reference frames.
 </p>
@@ -1003,6 +1004,12 @@ so it ranged over one centimetre.
     Mean Sea Level was fixed in the 1920's
     using the facility at Newlyn.
 </p>
+<p>
+    OS maps printed since the re-survey
+    have shown eastings and northings
+    around the edges.
+    Contour lines show height above sea level.
+</p>
 
 <p>
     OSGB is defined in
@@ -1015,13 +1022,9 @@ so it ranged over one centimetre.
     at strategic points around the country,
     usually on high ground so that they can be seen from a distance.
     These trig points move with continental drift
-    so the OSGB grid moves with them.
+    so the OSGB36 grid moves with them.
 </p>
-<p>
-    OS maps printed since that retriangulation
-    have shown eastings and northings
-    around the edges.
-</p>
+
 
 
 
@@ -1077,11 +1080,11 @@ so it ranged over one centimetre.
     Given that the positions of the satellites are specified
     by ECEF coordinates bound to the WGS84 reference frame,
     the GNSS receiver figures out
-    is in the same form.
+    its position within the same reference frame.
     For convenience,
-    some receivers converts the result to some other
-    system,
-    such as latitude, longitude
+    some receivers converts that result to some other
+    coordinate system,
+    such as latitude and longitude
     bound to the European Terrestrial Reference Frame
     and height above some suitable geoid.
 </p>
@@ -1132,11 +1135,10 @@ so it ranged over one centimetre.
     Another of my GNSS devices is a Garmin Etrax,
     a hiking aid.
     It doesn't have a correction system
-    so it's accurate can be no more than three metres.
+    so it's accuracy can be no more than three metres.
     It displays my position
     using Ordnance Survey notation,
     easting, northing and height above sea level.
-    That could be misleading.
     Internally it's using ECEF format,
     because that's how GNSS works.
     It's then converting the result to OSGB36 for display,
@@ -1161,7 +1163,7 @@ GNSS receiver.
         href='https://www.surreycc.gov.uk/land-planning-and-development/heritage-and-planning/portable-antiquities-scheme'>
         Portable Antiquities Scheme
     </a>
-    recommends it use for reporting finds.
+    recommends its use for reporting finds.
 </p>
 <p>
     Recording a position at that accuracy
