--- a/gnss/1.coordinates.m4.html
+++ b/gnss/1.coordinates.m4.html
@@ -60,9 +60,10 @@ linksFirstPage(`index.html', `2.gnss.html')
     mainly iron,
     very hot but under huge pressure,
     which stops it from melting.
-    Beyond that is more iron,
+    Above that is more iron,
     but liquid.
-    Te rotation of which generates the Earth's magnetic field.
+    It's the rotation of that
+    which generates the Earth's magnetic field.
     Further out from the centre is the mantle,
     essentially a hot gooey mess of rock,
     flowing like a very viscous liquid.
@@ -123,10 +124,13 @@ linksFirstPage(`index.html', `2.gnss.html')
     some quite violent.
 </p>
 <p>
-    This slow movement didn't matter so much
-    before accurate GNSS equipment came along,
-    but now it can be detected
-    using equipment costing only a few hundred dollars.
+    This slow movement didn't used to matter so much
+    to surveyors
+    because their equipment was not sensitive enough
+    to notice it.
+    Now it can be detected
+    using equipment costing only a few hundred dollars
+    and so it has to be taken into account.
 </p>
 
 <h3>The Ellipsoid</h3>
