--- a/gnss/3.trimble.m4.html
+++ b/gnss/3.trimble.m4.html
@@ -46,7 +46,7 @@ linksList(`2.position.html', `index.html', `4.ntrip.html')
     it can find its position to within about 3 metres,
     within a few seconds in good conditions.
     When connected to the Trimble RTK network,
-    the accuracy improves to 2 or 3 centimetres.
+    the accuracy improves to two or three centimetres.
 </p>
 
 <p>
@@ -58,10 +58,11 @@ linksList(`2.position.html', `index.html', `4.ntrip.html')
 </p>
 <p>
     Trimble also sells on-demand access to their RTK network.
-    You can buy ten or one hundred one-hour blocks of time.
+    You can buy blocks of ten or one hundred hours of time.
     Each time you connect to the RTK network, you burn one of your hours.
     At the end of the hour,
-    it asks if you want to burn another.
+    it asks if you want to burn another,
+    and so on.
     In the UK they cost £12 per block including VAT,
     so £120 minimum purchase.
     I'm not a professional surveyor
@@ -74,25 +75,28 @@ linksList(`2.position.html', `index.html', `4.ntrip.html')
     only works accurately when connected to their RTK service,
     which costs money.
     If the RTK service provided by Trimble
-    in your region don't give you two centimetre accuracy,
+    in your region don't give you centimetre accuracy,
     you can supply your own NTRIP feed (see later)
-    <b><i>but</i></b> only via their network,
+    <b><i>but</i></b> only via the Trimble network,
     at the same subscription price.
 </p>
 <p>
     The Catalyst is Trimble's entry level product.
-    Given that,
-    it does a great job,
+    It does a great job,
     but it can be defeated by tree cover
     or even just cloud.
-    Last time I used it I had a fairly open view of the sky,
+    I used it recently
+    and I had a fairly open view of the sky,
     well away from trees,
     but there was a very thin covering of cloud.
     I had to wait for three or four minutes
     before the device
-    managed to see enough satellites to start to work.
+    received signals from enough satellites to work.
+    Other times under what looked like similar conditions,
+    it gave me a fix much more rapidly.
     If you want to do serious work and your time is valuable,
-    you may want to buy one of their more expensive offerings.
+    you may want to try the Trimble service using a Catalyst
+    and then upgrade to one of their more expensive offerings.
 </p>
 <p>
     Using the Catalyst has taught me some some useful lessons.
@@ -194,6 +198,17 @@ linksList(`2.position.html', `index.html', `4.ntrip.html')
     they activate themselves after three months,
     and then evaporate a year later.
     Don't buy a block of hours until you need it
+</p>
+<p>
+    You can view the state of your on-demand hours using Trimble's
+    <a href='https://license-manager.trimble.com/licenses'>License Manager</a>
+    website.
+    Log in using the same account name and password
+    that you use to connect your device to the correction network.
+    The license Manager shows you
+    how many of your block of hours are left.
+    To see when the block expires,
+    use the Purchase History link at the bottom of the page.
 </p>
 <p>
     (I recently met reps from Korec and Trimble
