--- a/gnss/index.m4.html
+++ b/gnss/index.m4.html
@@ -4,24 +4,24 @@ include(sourceRoot/leader.m4.html)
 
 linksFirstPage(`/', `1.coordinates.html')
 
-<h2>Global Navigation Satellite Systems (GNSS)</h2>
+<h2>Global Navigation Satellite Systems</h2>
 <p>
-    GNSS is a generic term for a group ("constellation")
+    Global Navigation Satellite Systems (GNSS)
+    is the generic term for a group ("constellation")
     of satellites that send out radio signals which
     help a receiver to find its position.
-    The first and best known constellation
-    was the American Global Position System (GPS)
-    but there are now four constellations of navigation satellites
-    that cover the whole of the Earth - GPS, the Russian Glonass,
-    the Chinese BeiDou and the European Union's Galileo.
-    Some satellites from each of those constellations should be
-    visible from any point on the Earth's surface
-    with a clear view of the sky.
-    There are other constellations that give limited coverage.
 </p>
 <p>
-    GNSS receivers are available that can use the data from
-    any or all of these satellites to find their position.
+    The American Global Position System (GPS)
+    was the first of these
+    but there are now four constellations of navigation satellites,
+    each covering the whole of the Earth - GPS, the Russian Glonass,
+    the Chinese BeiDou and the European Union's Galileo.
+    Some satellites from these constellations should be
+    visible from any point on the Earth's surface
+    with a clear view of the sky.
+    There are other constellations that cover limited areas
+    of the planet.
 </p>
 <p>
     Greg Milner's book
@@ -30,19 +30,45 @@ linksFirstPage(`/', `1.coordinates.html')
     is a very readable history of the GPS system.
 </p>
 <p>
-    The use of a GNSS receiver to find a route
-    to some destination is well-known.
-    Satellite Navigation (SatNav) systems
-    have been used by drivers, sailors and pedestrians for many years
-    and nowadays the same technology is built into smartphones.
-    A SatNav
+    To find its position,
+    a GNSS receiver must receive at least
+    one signal each from four satellites.
+    Receivers are available that can use the data from
+    any or all of the constellations to find their position.
+</p>
+<p>
+    I have a GNSS receiver in my garden shed.
+    As I write,
+    it has just received:
+<ul>
+    <li>10 signals from 5 GPS satellites</li>
+    <li>12 signals from 6 Galileo satellites</li>
+    <li>16 signals from 11 BeiDou satellites</li>
+    <li>10 signals from 5 Glonass satellites</li>
+</ul>
+So at that time, 27 satellites were visible to my receiver.
+We are surrounded by other houses,
+which restricts our view of the sky.
+A receiver with an unrestricted view should see even more satellites
+at any time.
+The weather today is cloudy,
+which may reduce the signal reception a little more.
+</p>
+
+
+<p>
+    One use of a GNSS receiver is well-known.
+    A
+    Satellite Navigation (SatNav) system
     contains a GNSS Receiver,
     a digital map
     stored using some sort of Graphical Information System (GIS)
     and a sophisticated piece of software that keeps track
-    of where the device is within the map
+    of where the device is
     and figures out a good route from there
-    to wherever its user wants to end up.
+    to wherever its user wants to get to.
+    SatNavs have been used by drivers, sailors and pedestrians for many years
+    and nowadays the technology is built into smartphones.
 </p>
 <p>
     Other types of GNSS receiver are used just to find
@@ -54,29 +80,45 @@ linksFirstPage(`/', `1.coordinates.html')
     three metres.
     That's adequate for a SatNav
     but land surveying needs more accuracy.
-    As we will see,
-    Survey-quality GNSS devices
-    have been around for twenty years or more.
+    Using extra equipment,
+    two or three centimetre accuracy is typical
+    and millimetre accuracy is possible.
+</p>
+<p>
+    Survey-grade GNSS devices
+    have been around since the 1990s.
     They used to be very expensive and initially only
     large organisations could afford to use them.
     The UK's mapping authority
     the Ordnance Survey
     was an early adopter.
+    Ordnance Survey maps have been
+    based on GNSS surveys for twenty years or more.
+</p>
+<p>
     Over the last few years,
     prices have fallen dramatically
-    and accurate GNSS devices are now available
+    and now (in 2024)
+    centimetre-accurate GNSS devices are available
     for a few hundred dollars,
     making it feasible for a local architect,
     a builder
-    or an individual enthusiast like me to use them.
+    or an individual enthusiast like me to buy them.
 </p>
 <p>
-    I'm working on a proposal wherein
+    They can be used for all sorts of purposes.
+    I'm working on a proposal whereby
     young people (aged eleven to eighteen years)
     will use accurate GNSS receivers to measure
     the effects of continental drift.
 </p>
-
+<p>
+    Although tye equipment is now cheap,
+    it can be quite difficult to figure
+    out how to use it properly.
+    Fixing that is one of the purposes of
+    this website.
+</p>
 
 <p>
     linksFirstPage(`/', `1.coordinates.html')
