--- a/gnss/index.m4.html
+++ b/gnss/index.m4.html
@@ -113,7 +113,7 @@ which may reduce the signal reception a little more.
     the effects of continental drift.
 </p>
 <p>
-    Although tye equipment is now cheap,
+    Although the equipment is now cheap,
     it can be quite difficult to figure
     out how to use it properly.
     Fixing that is one of the purposes of
