--- a/devices/2.gnss.m4.html
+++ b/devices/2.gnss.m4.html
@@ -2,8 +2,9 @@ include(sourceRoot/definitions.m4)
 define(pageTitle, `position')
 include(sourceRoot/leader.m4.html)
 
-linksList(`1.coordinates.html', `index.html', `3.trimble.html')
-
+<p>
+    linksList(`1.trimble.html', `index.html', `3.rtcm.html')
+</p>
 
 <h2>Navigation by Satellite</h2>
 <p>
@@ -538,9 +539,8 @@ The BBC uses GNSS to synchronise its equipment.
     so I can't say.
 </p>
 
-
-
 <p>
-    linksList(`1.coordinates.html', `index.html', `3.trimble.html')
+    linksList(`1.trimble.html', `index.html', `3.rtcm.html')
 </p>
+
 include(sourceRoot/trailer.m4.html)
