--- a/index.m4.html
+++ b/index.m4.html
@@ -2,10 +2,14 @@ include(definitions.m4)
 define(pageTitle, `GPS home')
 include(leader.m4.html)
 
-		<p>
-This website is under construction.
-		</p>
-		<p>
-		</p>
+<p>
+	A GNSS device uses various coordinate systems
+	to work out and display its position.
+	To understand how the devices work,
+	you need to understand a little
+	<a href="/theory/index.html">theory</a>.
+</p>
+<p>
+</p>
 
 include(trailer.m4.html)
