--- a/theory/1.coordinates.m4.html
+++ b/theory/1.coordinates.m4.html
@@ -2,7 +2,7 @@ include(sourceRoot/definitions.m4)
 define(pageTitle, `coordinates')
 include(sourceRoot/leader.m4.html)
 
-linksFirstPage(`index.html', `2.longitude.latitude.height.html')
+linksFirstPage(`index.html', `2.latitude.longitude.height.html')
 
 
 <h2>Geographical Coordinate Systems</h2>
@@ -298,7 +298,7 @@ linksFirstPage(`index.html', `2.longitude.latitude.height.html')
 
 
 <p>
-    linksFirstPage(`index.html', `2.longitude.latitude.height.html')
+    linksFirstPage(`index.html', `2.latitude.longitude.height.html')
 </p>
 
 
