fixed broken links

--- a/theory/5.utm.m4.html
+++ b/theory/5.utm.m4.html
@@ -3,7 +3,7 @@ define(pageTitle, `coordinates')
 include(sourceRoot/leader.m4.html)
 
 <p>
-    linksList(`6.what.three.words.html', `index.html', `4.ecef.html')
+    linksList(`4.ecef.html', `index.html', `6.what.three.words.html')
 </p>
 
 <h3>Universal Transverse Mercator Coordinates</h3>
@@ -151,7 +151,7 @@ include(sourceRoot/leader.m4.html)
 </p>
 
 <p>
-    linksList(`6.what.three.words.html', `index.html', `4.ecef.html')
+    linksList(`4.ecef.html', `index.html', `6.what.three.words.html')
 </p>
 
 include(sourceRoot/trailer.m4.html)
