--- a/theory/6.what.three.words.m4.html
+++ b/theory/6.what.three.words.m4.html
@@ -3,7 +3,7 @@ define(pageTitle, `coordinates')
 include(sourceRoot/leader.m4.html)
 
 <p>
-    linksLastPage(`index.html', `4.ecef.html')
+    linksLastPage(`5.utm.html',`index.html')
 </p>
 
 <h3>What Three Words</h3>
@@ -49,7 +49,7 @@ GNSS receiver.
 </p>
 
 <p>
-    linksLastPage(`index.html', `4.ecef.html')
+    linksLastPage(`5.utm.html',`index.html')
 </p>
 
 
